--- a/app/assets/style/scss/components/_molecules.scss
+++ b/app/assets/style/scss/components/_molecules.scss
@@ -1,4 +1,235 @@
 /*==================== MOLECULES ====================*/
+/*band card*/
+.band-card {
+	$this: &;
+	
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	background-color: var(--basick-white);
+	box-shadow: 0px 0px 51px rgba(0, 0, 0, 0.05);
+	border-radius: 30px;
+	transition: box-shadow $duration, transform $duration;
+
+	&__img {
+		position: relative;
+		z-index: 1;
+		border-radius: 30px 30px 0 0;
+		overflow: hidden;
+
+		&::before {
+			content: "";
+			display: block;
+			padding-bottom: getPr(439, 368);
+		}
+	}
+
+	&__switch {
+		position: absolute;
+		left: 0;
+		top: 0;
+		z-index: 20;
+		width: 100%;
+		height: 100%;
+		display: flex;
+	}
+
+	&__pagination {
+		position: absolute;
+		left: 0;
+		bottom: 19px;
+		z-index: 30;
+		width: 100%;
+	}
+
+	&__text-box {
+		flex-grow: 1;
+		display: flex;
+		flex-direction: column;
+		padding: 32px 35px 50px;
+	}
+
+	&__name,
+	&__post {
+		text-align: center;
+	}
+
+	&__name {
+		font-size: 24px;
+		font-weight: 700;
+	}
+
+	&__post {
+		margin: getEm(10, 20) 0 auto;
+		font-size: 20px;
+		color: var(--color-primary);
+	}
+
+	&__info {
+		margin-top: auto;
+		padding-top: getEm(22, 16);
+		width: 100%;
+
+		& > * {
+			flex: 1;
+			margin-bottom: 10px;
+
+			&:last-child {
+				margin-bottom: 0;
+			}
+		}
+	}
+
+	.btn {
+		width: 100%;
+
+		&.disable {
+			pointer-events: none;
+			opacity: 0.6;
+		}
+	}
+
+	&__skills {
+		position: relative;
+		z-index: 2;
+
+		&-btn {
+			box-shadow: none;
+		}
+	}
+
+	&__certificates {
+		position: relative;
+		z-index: 2;
+
+		&-btn {
+			font-weight: 400;
+			box-shadow: 0px 0px 10px rgba(48, 130, 255, 0.3);
+		}
+	}
+
+	&__window {
+		position: absolute;
+		left: 75%;
+		bottom: calc(100% + 6px);
+		z-index: 5;
+		padding: 15px 30px 25px 25px;
+		max-width: 350px;
+		font-size: 15px;
+		background-color: var(--basick-white);
+		box-shadow: 0px 0px 10px rgba(48, 130, 255, 0.4);
+		border-radius: 10px;
+		opacity: 0;
+		pointer-events: none;
+		transition: opacity $duration;
+
+		&--scills {
+			width: 346px;
+		}
+
+		&--certificates {
+			row-gap: 8px;
+			column-gap: 9px;
+			display: grid;
+			grid-template-columns: repeat(2, auto);
+			padding: 15px 30px 25px;
+
+			img {
+				max-height: 80px;
+				max-width: 80px;
+
+				&:hover {
+					box-shadow: 0px 0px 10px rgba(48, 130, 255, 0.5);
+				}
+			}
+		}
+	}
+
+	.btn.active~&__window {
+		opacity: 1;
+		pointer-events: all;
+	}
+
+	&--min {
+		padding: 5px;
+
+		#{$this}__name,
+		#{$this}__post {
+			font-size: 20px;
+		}
+	}
+
+	@include desctop-mid {
+		&__text-box {
+			padding: 24px 25px 33px;
+		}
+		&__name {
+			font-size: 20px;
+		}
+		&__post {
+			font-size: 16px;
+		}
+
+		&__info {
+			padding-top: 20px;
+		}
+
+		.btn {
+			--height: 40px;
+			--fz: 14px;
+		}
+	}
+
+	@include table {
+		&--min {
+			#{$this}__img {
+				margin-bottom: 15px;
+				width: 110px;
+				height: 110px;
+			}
+
+			#{$this}__name {
+				font-size: 14px;
+			}
+
+			#{$this}__post {
+				font-size: 12px;
+			}
+		}
+	}
+
+	@include mobile {
+		border-radius: 20px;
+
+		&__img {
+			border-radius: 20px 20px 0 0;
+		}
+
+		&__text-box {
+			padding: 12px 10px 20px;
+		}
+		&__name {
+			font-size: 12px;
+		}
+		&__post {
+			font-size: 10px;
+		}
+
+		&__info {
+			padding-top: 13px;
+		}
+
+		&__window {
+			font-size: 14px;
+		}
+
+		.btn {
+			--height: 30px;
+			--fz: 10px;
+			border-width: 1px;
+		}
+	}
+}
 
 /* btns */
 .btns {
@@ -654,6 +885,87 @@
 				padding: 24px 22px 36px;
 			}
 		}
+	}
+}
+
+/* img switch */
+.img-switch {
+	$this: &;
+
+	display: flex;
+
+	&__item {
+		flex-grow: 1;
+		cursor: pointer;
+
+		&:not(:first-child) {
+			display: none;
+		}
+	}
+
+	&__img {
+		position: absolute;
+		left: 50%;
+		top: 0;
+		z-index: 2;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 100%;
+		height: 100%;
+		background-color: var(--color-primary);
+		opacity: 0;
+		pointer-events: none;
+		transform: translateX(-50%);
+
+		#{$this}__item:first-child & {
+			opacity: 1;
+			z-index: -1;
+		}
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	}
+
+	@include from($table) {
+		&__item {
+			&:not(:first-child) {
+				display: block;
+			}
+		}
+		&__img {
+			#{$this}__item:hover & {
+				opacity: 1;
+				z-index: -1;
+			}
+		}
+	}
+}
+
+.img-pagination {
+	display: flex;
+	justify-content: center;
+
+	&__item {
+		display: block;
+		width: 8px;
+		height: 8px;
+		border-radius: 100%;
+		margin: 0 8px;
+		background-color: rgba(255, 255, 255, 0.89);
+		transition: all 0.2s;
+
+		&--active {
+			background-color: var(--color-primary);
+			transform: scale(1.4);
+		}
+	}
+
+	@include table {
+		display: none;
 	}
 }
 
