--- a/app/assets/style/scss/base/_settings.scss
+++ b/app/assets/style/scss/base/_settings.scss
@@ -57,7 +57,14 @@ $utilities: (
 	),
 	"order": (
 		property: order,
-		values: n5 n2 n1 0 1 3 4 5,
+		values: (
+			n1: -1,
+			1: 1,
+			2: 2,
+			3: 3,
+			4: 4,
+			5: 5
+		),
 	),
 	"font-weight": (
 		responsive: false,
