--- a/app/templates/portfolio_develop.twig
+++ b/app/templates/portfolio_develop.twig
@@ -149,38 +149,36 @@
 		</div>
 		<section id="struktura" class="section">
 			<h2 class="section__title title-1">Структура сайта</h2>
-			<div class="desc-item desc-item--reverse">
-				<div class="desc-item__row ais gx-50 gy-20">
-					<div class="desc-item__col desc-item__col--text content text fz-18 fz-sm-14">
-						<p>
-							Далее SEO-специалист приступил к составлению проектной документации. В ходе работ мы собрали
-							семантическое ядро, спроектировали структуру каталога, а также согласовали прототипы
-							страниц.
-						</p>
-						<p>
-							Далее SEO-специалист приступил к составлению проектной документации. В ходе работ мы собрали
-							семантическое ядро, спроектировали структуру каталога, а также согласовали прототипы
-							страниц.
+			<div class="row justify-content-center ais gx-50 gy-20">
+				<div class="col-3 col-md-12 order-md-2 d-flex">
+					<div class="pos-relative d-inline-flex jcc bg-pseudoel-blue-alpha mx-auto" style="max-width: 500px;">
+						<a class="zoom-photo" href="assets/img/test/structura.jpg" data-fslightbox="struktura">
+							<span class="zoom-photo__text">Увеличить</span>
+							<svg class="zoom-photo__icon" width="16" height="16" viewBox="0 0 16 16">
+								<path
+									d="M15.4888 14.5735L11.6808 10.6129C12.6599 9.44901 13.1964 7.98455 13.1964 6.45999C13.1964 2.89801 10.2983 0 6.73636 0C3.17438 0 0.276367 2.89801 0.276367 6.45999C0.276367 10.022 3.17438 12.92 6.73636 12.92C8.07358 12.92 9.34788 12.5167 10.4374 11.751L14.2743 15.7416C14.4347 15.9082 14.6504 16 14.8816 16C15.1004 16 15.3079 15.9166 15.4655 15.7649C15.8003 15.4428 15.811 14.9085 15.4888 14.5735ZM6.73636 1.68522C9.36923 1.68522 11.5111 3.82713 11.5111 6.45999C11.5111 9.09286 9.36923 11.2348 6.73636 11.2348C4.10349 11.2348 1.96158 9.09286 1.96158 6.45999C1.96158 3.82713 4.10349 1.68522 6.73636 1.68522Z" />
+							</svg>
+						</a>
+						<img src="assets/img/test/structura.jpg" alt="">
+					</div>
+				</div>
+				<div class="col-9 col-md-12 content text fz-18 fz-sm-14">
+					<p>
+						Далее SEO-специалист приступил к составлению проектной документации. В ходе работ мы собрали
+						семантическое ядро, спроектировали структуру каталога, а также согласовали прототипы
+						страниц.
+					</p>
+					<p>
+						Далее SEO-специалист приступил к составлению проектной документации. В ходе работ мы собрали
+						семантическое ядро, спроектировали структуру каталога, а также согласовали прототипы
+						страниц.
 
-						</p>
-						<p>
-							Далее SEO-специалист приступил к составлению проектной документации. В ходе работ мы собрали
-							семантическое ядро, спроектировали структуру каталога, а также согласовали прототипы
-							страниц.
-						</p>
-					</div>
-					<div class="desc-item__col desc-item__col--img">
-						<div class="pos-relative d-inline-flex jcc bg-pseudoel-blue-alpha">
-							<a class="zoom-photo" href="assets/img/test/structura.jpg" data-fslightbox="struktura">
-								<span class="zoom-photo__text">Увеличить</span>
-								<svg class="zoom-photo__icon" width="16" height="16" viewBox="0 0 16 16">
-									<path
-										d="M15.4888 14.5735L11.6808 10.6129C12.6599 9.44901 13.1964 7.98455 13.1964 6.45999C13.1964 2.89801 10.2983 0 6.73636 0C3.17438 0 0.276367 2.89801 0.276367 6.45999C0.276367 10.022 3.17438 12.92 6.73636 12.92C8.07358 12.92 9.34788 12.5167 10.4374 11.751L14.2743 15.7416C14.4347 15.9082 14.6504 16 14.8816 16C15.1004 16 15.3079 15.9166 15.4655 15.7649C15.8003 15.4428 15.811 14.9085 15.4888 14.5735ZM6.73636 1.68522C9.36923 1.68522 11.5111 3.82713 11.5111 6.45999C11.5111 9.09286 9.36923 11.2348 6.73636 11.2348C4.10349 11.2348 1.96158 9.09286 1.96158 6.45999C1.96158 3.82713 4.10349 1.68522 6.73636 1.68522Z" />
-								</svg>
-							</a>
-							<img src="assets/img/test/structura.jpg" alt="">
-						</div>
-					</div>
+					</p>
+					<p>
+						Далее SEO-специалист приступил к составлению проектной документации. В ходе работ мы собрали
+						семантическое ядро, спроектировали структуру каталога, а также согласовали прототипы
+						страниц.
+					</p>
 				</div>
 			</div>
 		</section>
