--- a/app/assets/style/scss/components/_molecules.scss
+++ b/app/assets/style/scss/components/_molecules.scss
@@ -231,6 +231,27 @@
 	}
 }
 
+figure {
+	figcaption {
+		margin-top: getEm(20, 16);
+		font-style: italic;
+		text-align: center;
+		color: #898989;
+	}
+}
+
+figure {
+	overflow: hidden;
+
+	[data-fslightbox] img {
+		transition: transform 0.5s;
+		
+		&:hover {
+			transform: scale(1.02);
+		}
+	}
+}
+
 /* btns */
 .btns {
 	display: flex;
@@ -1385,7 +1406,8 @@
 	}
 }
 
-.table-1 {
+.table-1,
+table {
 	--border-spacing-x: 4px;
 	--border-spacing-y: 4px;
 
@@ -2086,9 +2108,9 @@
 
 .sitelinks {
 	position: fixed;
-	bottom: 255px;
+	bottom: 240px;
 	right: 50px;
-	z-index: 250;
+	z-index: 200;
 
 	&__list {
 		display: inline-flex;
